# fastdateinfer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: inference.rs
python/fastdateinfer/: __init__.py  __init__.pyi
src/: consensus.rs  constraints.rs  error.rs  format.rs  lib.rs  prescan.rs  python.rs  rules.rs  tokenizer.rs
tests/: test_fastdateinfer.py
